ceph-objectstore-tool: fix split check on import

Consider pg 1.3:
- in epoch A it splits to 1.b
- in epoch B 1.b splits to 1.1b

We export 1.3 before A, and import into another OSD that already has 1.b.
The existing check looks for whether 1.3 splits into 1.1b from B-1 to B,
but it should really look look at whether 1.3 splits into 1.1b over the
*entire* range (the export epoch, which is something < A).

Fixes: http://tracker.ceph.com/issues/37671
Signed-off-by: Sage Weil <sage@redhat.com>